<?xml version="1.0"?>
<package format="3">
  <name>test_roslaunch_required</name>
  <version>0.0.0</version>
  <description>The test_roslaunch_required package</description>

  <maintainer email="pazeshun3682@gmail.com">Shun Hasegawa</maintainer>
  <author email="pazeshun3682@gmail.com">Shun Hasegawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
